test/compilable/imports/test7327d.d
void foo(int) {}
void bar(int) {}
void baz(int) {}
alias foo buz;
