test/fail_compilation/fail248.d
alias int foo;
typeof(foo) a; // ok

